[package]
name = "tokio-tun"
version = "0.7.0"
authors = ["Navid <yaa110@gmail.com>"]
edition = "2021"
homepage = "https://github.com/yaa110/tokio-tun"
repository = "https://github.com/yaa110/tokio-tun"
documentation = "https://docs.rs/tokio-tun"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Asynchronous allocation of TUN/TAP devices using tokio"
categories = ["asynchronous", "network-programming"]
keywords = ["tun", "tap", "async", "tokio"]

[dependencies]
tokio = { version = "1", features = ["net"] }
libc = "0.2"
nix = { version = "0.25", default-features = false, features = ["ioctl"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
