[package]
authors = ["Navid <yaa110@gmail.com>"]
categories = ["asynchronous", "network-programming"]
description = "Asynchronous allocation of TUN/TAP devices using tokio"
documentation = "https://docs.rs/tokio-tun"
edition = "2021"
homepage = "https://github.com/yaa110/tokio-tun"
keywords = ["tun", "tap", "async", "tokio"]
license = "MIT OR Apache-2.0"
name = "tokio-tun"
readme = "README.md"
repository = "https://github.com/yaa110/tokio-tun"
version = "0.8.0"

[dependencies]
anyhow = "1"
libc = "0.2"
nix = {version = "0.26", default-features = false, features = ["ioctl"]}
tokio = {version = "1", features = ["net"]}

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
